@@ -1,5 +1,5 @@
 #
-# "$Id: cups.list.in,v 1.13.2.21 2003/06/20 02:48:48 mike Exp $"
+# "$Id: cups.list.in,v 1.13.2.22 2004/02/26 16:07:08 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for the Common UNIX Printing
 #   System (CUPS).
@@ -151,11 +151,14 @@ f 0555 root sys $SERVERBIN/filter/rastertohp filter/rastertohp
 f 0555 root sys $SERVERBIN/filter/texttops filter/texttops
 
 # Admin commands
+d 0555 root sys $BINDIR -
 l 0555 root sys $BINDIR/disable $SBINDIR/accept
 l 0555 root sys $BINDIR/enable $SBINDIR/accept
 l 0555 root sys $LIBDIR/accept $SBINDIR/accept
+d 0555 root sys $LIBDIR -
 l 0555 root sys $LIBDIR/lpadmin $SBINDIR/lpadmin
 l 0555 root sys $LIBDIR/reject accept
+d 0555 root sys $SBINDIR -
 f 0555 root sys $SBINDIR/accept systemv/accept
 f 0555 root sys $SBINDIR/cupsaddsmb systemv/cupsaddsmb
 f 0555 root sys $SBINDIR/lpadmin systemv/lpadmin
@@ -412,5 +415,5 @@ f 0444 root sys $AMANDIR/man$MAN8DIR/lpmove.$MAN8EXT man/lpmove.man
 i 0555 root sys cups cups.sh
 
 #
-# End of "$Id: cups.list.in,v 1.13.2.21 2003/06/20 02:48:48 mike Exp $".
+# End of "$Id: cups.list.in,v 1.13.2.22 2004/02/26 16:07:08 mike Exp $".
 #
