@@ -3,6 +3,10 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- Optimized the scanning of new PPD files on scheduler
+	  startup (STR #424)
+	- The EPM list file did not include the bin, lib, or
+	  sbin directories (STR #598)
 	- The web interface did not redirect administration
 	  tasks to the primary server for a class or printer
 	  (STR #491)
